[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evmos_protobuf"
version = "0.2.0"
description = "This package contains a compiled python version of all evmos protobuf files with their dependencies"
authors = [
    { name = "ctrl-felix", email = "dev@ctrl-felix.de" },
]
readme = "README.md"
keywords = ["cosmospy", "evmospy", "osmospy", "proto", "cosmospy-protobuf", "evmos", "evmos-protobuf", "protobuf"]
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "protobuf",
]
dynamic = []

[project.urls]
"Homepage" = "https://github.com/ctrl-Felix/cosmospy-protobuf/"
"Bug Tracker" = "https://github.com/ctrl-Felix/cosmospy-protobuf/issues"
"Changelog" = "https://github.com/ctrl-Felix/cosmospy-protobuf/blob/chain/evmos/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/evmos_protobuf"]
