[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel_protobuf"
version = "0.2.2"
description = "This package contains a compiled python version of all sentinel protobuf files with their dependencies"
authors = [
    { name = "freQniK", email = "freQniK@mathnodes.com" },
]
readme = "README.md"
keywords = ["cosmospy", "proto", "cosmospy-protobuf", "cosmos", "sentinel-protobuf", "protobuf", "sentinel"]
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "protobuf",
]
dynamic = []

[project.urls]
"Homepage" = "https://github.com/MathNodes/cosmospy-protobuf/"
"Bug Tracker" = "https://github.com/MathNodes/cosmospy-protobuf/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel_protobuf"]
