[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cosmospy_protobuf"
version = "0.4.0"
description = "This package contains a compiled python version of all cosmos protobuf files with their dependencies"
authors = [
    { name = "ctrl-felix", email = "dev@ctrl-felix.de" },
]
readme = "README.md"
keywords = ["cosmospy", "proto", "cosmospy-protobuf", "cosmos", "cosmos-protobuf", "protobuf"]
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "protobuf",
]
dynamic = []

[project.urls]
"Homepage" = "https://github.com/ctrl-Felix/cosmospy-protobuf/"
"Bug Tracker" = "https://github.com/ctrl-Felix/cosmospy-protobuf/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cosmospy_protobuf"]
